--- a/cheatSheet.html
+++ b/cheatSheet.html
@@ -41,6 +41,14 @@
     </div>
   </div>
 
+   <div class="window">
+    <h3>.odd?</h3>
+    <p> returns TRUE if int is odd number </p>
+    <div class="code">
+      <h4>int.odd? => TRUE</h4>
+    </div>
+  </div>
+
 
 
 </div>
